fixed alignment issues in the html

--- a/week-01/day-03/dogs/index.html
+++ b/week-01/day-03/dogs/index.html
@@ -14,9 +14,7 @@
         <li>Affenpinscher</li>
         <li>Airedale Terrier</li>
         <li>Akbash</li>
-        <li>Alaskan Malamute
-    
-        </li>
+        <li>Alaskan Malamute</li>
     </ul>
 
     
