--- a/week-05/day-1/layout-1/index.html
+++ b/week-05/day-1/layout-1/index.html
@@ -11,7 +11,7 @@
 <div class='page-container'>
   <!-- NAVIGATION-->
   <nav>
-    <ul class='list-container'>
+    <ul class='header'>
       <li class='nav-item'></li>
       <li class='nav-item'></li>
       <li class='nav-item'></li>
@@ -20,8 +20,8 @@
 
   <!-- Main content-->
   <div class='main'>
-    <article></article>
-    <section></section>
+    <article class='main-content'></article>
+    <section class='sidebar'></section>
   </div>
 </div>
 
