--- a/week-08/day-1/delayed-click.html
+++ b/week-08/day-1/delayed-click.html
@@ -17,12 +17,16 @@
 
     const button = document.querySelector('button');
     
-    const showtext = () => {
-      const pTag = document.querySelector('p');
-      pTag.textContent = '2 seconds ellapsed';
+    function delay () {
+      setTimeout(showtext, 2000);
     }
 
-    button.addEventListener('click', setTimeout(showtext, 2000));
+    const showtext = () => {
+        const pTag = document.querySelector('p');
+        pTag.textContent = '2 seconds ellapsed';
+    };
+
+    button.addEventListener('click', delay);
   </script>
 </body>
 </html>
