--- a/week-10/url-aliaser/public/index.html
+++ b/week-10/url-aliaser/public/index.html
@@ -11,11 +11,11 @@
   <p id='message'></p>
   <form>
     <label for="url">URL</label> <br>
-    <input type="text" name="url" id="url"> <br> <br>
+    <input type="text" name="url" id="url" required> <br> <br>
 
     <label for="alias">Alias</label> <br>
-    <input type="text" name="alias" id="alias" maxlength="28"> <br>
-    <input type="submit" value="Submit">
+    <input type="text" name="alias" id="alias" maxlength="28" required> <br>
+    <button type="submit">Submit</button>
   </form>
   <script src="index.js"></script>
 </body>
