--- a/week-10/auction/public/index.html
+++ b/week-10/auction/public/index.html
@@ -12,15 +12,15 @@
 
   <h2>Bid</h2>
   <p></p>
-  <form>
-    <select name="stuff" id="auction">
+  <form >
+    <select name="stuff" id="auction" required>
     </select>
 
     <label for="bidderName">Name</label>
-    <input type="text" name="bidderName" id="name"> <br>
+    <input type="text" name="bidderName" id="bidderName"> <br>
 
-    <label for="amount">Amount</label>
-    <input type="number" name="amount" id="amount">
+    <label for="amount">Amount</label> <br>
+    <input type="number" name="amount" id="amount"> <br>
 
     <button type='submit'>Submit</button>
   </form>
